2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/Crafting_Details__c.object-meta.xml
<CustomObject>
    <label>Crate Details</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Crating Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crate Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>