2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Artwork_Details__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Details__c</fullName>
    <label>Artwork Details</label>
    <type>TextArea</type>
</CustomField>