2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Artwork_Type__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Type__c</fullName>
    <label>Artwork Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2-D</fullName>
                <default>true</default>
                <label>2-D</label>
            </value>
            <value>
                <fullName>3-D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>