2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Base_Plate_Length_cm__c.field-meta.xml
<CustomField>
    <fullName>Base_Plate_Length_cm__c</fullName>
    <label>Base Plate Length (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>