2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Base_Plate_Width_cm__c.field-meta.xml
<CustomField>
    <fullName>Base_Plate_Width_cm__c</fullName>
    <description>Can you make this required only if the Base plate Checkbox is TRUE</description>
    <label>Base Plate Width (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>