2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Base_Support__c.field-meta.xml
<CustomField>
    <fullName>Base_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Plate Support</label>
    <type>Checkbox</type>
</CustomField>