2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Breadth_cm_Combined__c.field-meta.xml
<CustomField>
    <fullName>Breadth_cm_Combined__c</fullName>
    <formula>CASE(RecordType.DeveloperName , 
&quot;Hong_Kong&quot;,  Breadth_in__c  * 2.54 , 
 Breadth__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breadth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>