2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Breadth_in__c.field-meta.xml
<CustomField>
    <fullName>Breadth_in__c</fullName>
    <description>Breadth in Inches for Hong Kong</description>
    <label>Breadth (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>