2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <formula>( Breadth_cm_Combined__c * Height_cm_Combined__c * Length_cm_Combined__c )/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>