2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Crate_No__c.field-meta.xml
<CustomField>
    <fullName>Crate_No__c</fullName>
    <label>Crate No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>