2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Crate_Type__c.field-meta.xml
<CustomField>
    <fullName>Crate_Type__c</fullName>
    <label>Crate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B Crate</fullName>
            </value>
            <value>
                <fullName>C Crate</fullName>
            </value>
            <value>
                <fullName>D Crate</fullName>
            </value>
            <value>
                <fullName>A-Frame</fullName>
            </value>
            <value>
                <fullName>T-Frame</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>No Crate. Supports Only</fullName>
                <label>No Crate. Supports Only. 不需要木箱</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>