2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Crating_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Crating_Instruction__c</fullName>
    <label>Crating Instruction</label>
    <referenceTo>Crating_Instruction__c</referenceTo>
    <relationshipLabel>Crate Details</relationshipLabel>
    <relationshipName>Crafting_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>