2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Crating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Crating_Notes__c</fullName>
    <label>Crating Notes</label>
    <type>TextArea</type>
</CustomField>