2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Height_cm_Combined__c.field-meta.xml
<CustomField>
    <fullName>Height_cm_Combined__c</fullName>
    <formula>CASE(RecordType.DeveloperName , 
&quot;Hong_Kong&quot;,   Height_in__c   * 2.54 , 
Height__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>