2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Height_in__c.field-meta.xml
<CustomField>
    <fullName>Height_in__c</fullName>
    <description>Height in Inches for Hong Kong</description>
    <label>Height (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>