2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>