2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Length_cm_Combined__c.field-meta.xml
<CustomField>
    <fullName>Length_cm_Combined__c</fullName>
    <formula>CASE(RecordType.DeveloperName  , 
          &quot;Hong_Kong&quot;, Length_in__c * 2.54  ,
           Length__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>