2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Length_in__c.field-meta.xml
<CustomField>
    <fullName>Length_in__c</fullName>
    <description>Length in Inches Fields for Hong Kong</description>
    <label>Length (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>