2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Crate Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>