2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Opening_Side__c.field-meta.xml
<CustomField>
    <fullName>Opening_Side__c</fullName>
    <label>Opening Side</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broadside 宽面</fullName>
                <default>true</default>
                <label>Broadside 宽面</label>
            </value>
            <value>
                <fullName>Top 顶部</fullName>
            </value>
            <value>
                <fullName>Side+Top 宽面+顶</fullName>
            </value>
            <value>
                <fullName>All Sides 全面</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>