2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Triangle_Base_Width_cm__c.field-meta.xml
<CustomField>
    <fullName>Triangle_Base_Width_cm__c</fullName>
    <description>Can you make this required only if the Triangle Checkbox is TRUE</description>
    <label>Triangle Base Width (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>