2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Triangle_Base_Width_cm_Combined__c.field-meta.xml
<CustomField>
    <fullName>Triangle_Base_Width_cm_Combined__c</fullName>
    <formula>CASE(RecordType.DeveloperName , 
&quot;Hong_Kong&quot;,  Triangle_Base_Width_in__c * 2.54 , 
 Triangle_Base_Width_cm__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triangle Base Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>