2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Triangle_Base_Width_in__c.field-meta.xml
<CustomField>
    <fullName>Triangle_Base_Width_in__c</fullName>
    <description>Triangle Base Width in Inches for Hong Kong</description>
    <label>Triangle Base Width (in)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>