2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/fields/Triangle_Supports__c.field-meta.xml
<CustomField>
    <fullName>Triangle_Supports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triangle Supports</label>
    <type>Checkbox</type>
</CustomField>