2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/recordTypes/Beijing.recordType-meta.xml
<RecordType>
    <fullName>Beijing</fullName>
    <active>true</active>
    <description>English - Simplified Chinese</description>
    <label>Beijing</label>
</RecordType>