2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/recordTypes/Hong_Kong.recordType-meta.xml
<RecordType>
    <fullName>Hong_Kong</fullName>
    <active>true</active>
    <description>Hong Kong Traditional Chinese</description>
    <label>Hong Kong</label>
</RecordType>