2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <description>English - Simplified Chinese</description>
    <label>Master</label>
</RecordType>