2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/recordTypes/Shanghai.recordType-meta.xml
<RecordType>
    <fullName>Shanghai</fullName>
    <active>true</active>
    <description>English - Simplified Chinese</description>
    <label>Shanghai</label>
</RecordType>