2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/validationRules/Breadth_Empty_When_No_Crate_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Breadth_Empty_When_No_Crate_Type</fullName>
    <active>false</active>
    <description>Breadth must be less than or equal to zero when Crate Type is No Crate . Supports Only</description>
    <errorConditionFormula>IF ( AND ( RecordType.Name  = &apos;Master&apos;,ISPICKVAL(Crate_Type__c , &quot;No Crate. Supports Only&quot; ) , Breadth__c &gt; 0 ) , TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Breadth__c</errorDisplayField>
    <errorMessage>Breadth must be less than or equal to zero when Crate Type is No Crate . Supports Only</errorMessage>
</ValidationRule>