2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/validationRules/Height_Empty_When_No_Crate_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Height_Empty_When_No_Crate_Type</fullName>
    <active>false</active>
    <description>Height must be less than or equal to zero when Crate Type is No Crate . Supports Only</description>
    <errorConditionFormula>IF ( AND ( RecordType.Name = &apos;Master&apos;,ISPICKVAL(Crate_Type__c , &quot;No Crate. Supports Only&quot; ) , Height__c &gt; 0 ) , TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Height__c</errorDisplayField>
    <errorMessage>Height must be less than or equal to zero when Crate Type is No Crate . Supports Only</errorMessage>
</ValidationRule>