2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/validationRules/Height_Empty_When_No_Crate_Type_HK.validationRule-meta.xml
<ValidationRule>
    <fullName>Height_Empty_When_No_Crate_Type_HK</fullName>
    <active>false</active>
    <description>Height must be less than or equal to zero when Crate Type is No Crate . Supports Only
For Hong Kong</description>
    <errorConditionFormula>IF ( AND ( RecordType.Name  = &apos;Hong Kong&apos;,ISPICKVAL(Crate_Type__c , &quot;No Crate. Supports Only&quot; ) ,  Height_in__c &gt; 0 ) , TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Height_in__c</errorDisplayField>
    <errorMessage>Height must be less than or equal to zero when Crate Type is No Crate . Supports Only</errorMessage>
</ValidationRule>