2nd training/Community/Community/Community1/force-app/main/default/objects/Crafting_Details__c/validationRules/Triangle_Base_Width_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Triangle_Base_Width_Mandatory</fullName>
    <active>true</active>
    <description>If Triangle Supports is chosen, Triangle Base Width field is mandatory</description>
    <errorConditionFormula>IF ( AND ( RecordType.Name = &apos;Master&apos;,
           Triangle_Supports__c = TRUE,
            ISNULL( Triangle_Base_Width_cm__c)
         ), TRUE , FALSE )</errorConditionFormula>
    <errorDisplayField>Triangle_Base_Width_cm__c</errorDisplayField>
    <errorMessage>If Triangle Supports is chosen, Triangle Base Width field is mandatory</errorMessage>
</ValidationRule>